feat: finishing delete news
