# backend/docs/swagger.yaml
@@ -12,17 +12,16 @@ definitions:
     type: object
   newsHandler.CreateNewsResponse:
     properties:
-      createdAt:
+      data:
+        $ref: '#/definitions/schema.NewsResponse'
+      message:
         type: string
-      firstContent:
-        type: string
-      secondContent:
-        type: string
-      thirdContent:
-        type: string
-      title:
-        type: string
-      updatedAt:
+    type: object
+  newsHandler.DeleteNewsResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schema.NewsResponse'
+      message:
         type: string
     type: object
   newsHandler.ErrorResponse:
@@ -30,6 +29,23 @@ definitions:
       errorCode:
         type: string
       message:
+        type: string
+    type: object
+  schema.NewsResponse:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        type: string
+      firstContent:
+        type: string
+      id:
+        type: integer
+      secondContent:
+        type: string
+      thirdContent:
+        type: string
+      updatedAt:
         type: string
     type: object
 info:
@@ -64,6 +80,35 @@ paths:
           schema:
             $ref: '#/definitions/newsHandler.ErrorResponse'
       summary: Create News
+      tags:
+      - Openings
+  /opening:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a news
+      parameters:
+      - description: News identification
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/newsHandler.DeleteNewsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/newsHandler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/newsHandler.ErrorResponse'
+      summary: Delete news
       tags:
       - Openings
 swagger: "2.0"
