# backend/schema/news.go
@@ -1,6 +1,8 @@
 package schema
 
 import (
+	"time"
+
 	"github.com/google/uuid"
 	"gorm.io/gorm"
 )
@@ -9,6 +11,16 @@ type News struct {
 	gorm.Model
 	ID uuid.UUID
 	Title string
+	FirstContent string
+	SecondContent string
+	ThirdContent string
+}
+
+type NewsResponse struct {
+	ID uint 			`json:"id"`
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
+	DeletedAt time.Time `json:"deletedAt,omitempty"`
 	FirstContent string
 	SecondContent string
 	ThirdContent string
